--- a/helf-react/public/index.html
+++ b/helf-react/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>당신의 헬스 프렌드, 헬프 </title>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
